# component-model

./: .gitignore  LICENSE  README.md
.github/workflows/: main.yml
design/: README.md
design/high-level/: Choices.md  FAQ.md  Goals.md  README.md  UseCases.md
design/mvp/: Async.md  Binary.md  BuildTargets.md  CLIEmbedding.md  CanonicalABI.md  Concurrency.md  Explainer.md  FutureFeatures.md  Linking.md  ListDiscussion.md  Subtyping.md  TypedMain.md  WAVE.md  WIT.md  e
design/proposals/: README.md
interpreter/: default.nix  dune  dune-project  wasm_components.opam
interpreter/main/: main.ml
interpreter/script/: run.ml  run.mli  script.ml
interpreter/syntax/: ast.ml
interpreter/test/resource/: resource-simple.wast
interpreter/text/: Putil.ml  desugar.ml  dune  lexer.mli  lexer.mll  parse.ml  parse.mli  parser.mly
interpreter/valid/: elaborate.ml  etype_pp.ml  etypes.ml  substitute.ml  subtype.ml  subtype.mli  valid.ml  valid.mli
spec/: README.md
spec/document/: macros.tex  shell.nix  spec.tex
test/: README.md  nyi.txt
test/async/: async-calls-sync.wast  big-interleaving-test.wast  builtin-trap-poisons-instance.wast  cancel-stream.wast  cancel-subtask.wast  cancellable.wast  close-stream.wast  closed-stream.wast  cross-abi-calls.wast  cross-task-block-and-sync.wast  cross-task-future.wast  deadlock.wast  dont-block-start.wast  drop-cross-task-borrow.wast  drop-stream.wast  drop-subtask.wast  drop-waitable-set.wast  empty-wait.wast  futures-must-write.wast  partial-stream-copies.wast  passing-resources.wast  reject-gated-features.wast  same-component-stream-future.wast  subtasks.wast  sync-barges-in.wast  (+10 more)
(+44 files in other folders)
